<resources>
    // Common
    <string name="app_name" translatable="false">City Guide</string>
    <string name="app_version">1.0.0 release</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="error">Error!</string>
    <string name="sign_in_to_add_favorites">Sign in to add to favorites</string>

    // Home page
    <string name="popular">Popular</string>
    <string name="historical_places">Historical places</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hello">Hello</string>
    <string name="place_search">Place search</string>

    // Favorite page
    <string name="your_favorites">Your favorites</string>
    <string name="empty_favorites">There is nothing in your favorites</string>

    // Search page
    <string name="search">Search</string>
    <string name="no_such_places">Sorry, no such places found</string>
    <string name="search_greeting">Search among dozens of interesting places!</string>

    // Detail page
    <string name="detail">Detail</string>
    <string name="message_add_to_favorite">Successfully added to favorites!</string>
    <string name="message_remove_from_favorite">Successfully removed!</string>
    <string name="title_general_information">General information</string>
    <string name="title_history_information">A bit of history</string>
    <string name="title_you_can_see">What you can see</string>

    // Profile page
    <string name="warning_account_title">You are not logged in</string>
    <string name="warning_account_subtitle">Sign in to get more features!</string>
    <string name="about_app">About app</string>
    <string name="additionally">Additionally</string>

    // Edit name page
    <string name="enter_name">Enter name</string>
    <string name="enter_name_hint">What is your name?</string>
    <string name="save">Save</string>

    // Auth pages
    <string name="phone_number">Phone number</string>
    <string name="we_send_you">We have sent you an SMS with a code. Enter it in the field below:</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_code">Enter confirmation code</string>
    <string name="resend_code">Didn\'t receive a code? Resend</string>
    <string name="send_code">Send code</string>
    <string name="confirm_phone">Confirm phone</string>
</resources>